--- a/www/left/Left.html
+++ b/www/left/Left.html
@@ -1,3 +1,15 @@
 <div class="panel-izquierda">
-    
+    <div class="container-fluid">
+        <div id="tabs" class="bg-light" style="position:absolute; left:0; width: 70;">
+            <div class="opcion-izquierda activa" data-opcion="sesion">
+                <img src="img/iconos/usuario.svg" width="32px">
+                <div>Sesión</div>
+            </div>
+            <div class="opcion-izquierda"  data-opcion="preferencias">
+                <img src="img/iconos/preferencias.svg" width="32px">
+                <div>Preferencias</div>
+            </div>
+        </div>
+        <div id="opcionesLoader" class="border" style="position:absolute; left:70px; width: 266px;" data-z-load="./Sesion"></div>
+    </div>
 </div>
