--- a/www/Main.html
+++ b/www/Main.html
@@ -1,3 +1,3 @@
 <div id="mapa" data-z-component="./mapa/Mapa" style="position: absolute;" class="mapa"></div>
-<div id="top" data-z-component="./top/Top" style="position: absolute;" class="top"></div>
-<div id="left" data-z-component="./left/Left" style="position: absolute;" class="panel-izquierda"></div>
+<div id="top" data-z-component="./top/Top" style="position: absolute; z-index: 10000;" class="top"></div>
+<div id="left" data-z-component="./left/Left" style="position: absolute; z-index: 10001;" class="panel-izquierda"></div>
