--- a/www/top/Top.html
+++ b/www/top/Top.html
@@ -1,32 +1,33 @@
 <div>
     <form id="leftM" class="top-menu-left form-inline pt-1 float-left" style="margin-top:-8px; height:48px;">
         <i id="cmdAlternaMenu" class="fas fa-bars fa-lg float-left ml-2" style="cursor: pointer;" data-z-clickable="true"></i>
-        <input id="edBuscarUbicacion" type="text" placeholder="Buscar Ubicación" 
+        <input id="edBuscarUbicacion" type="text" placeholder="Buscar Ubicación"
+            data-z-autochange-delay="300" 
             class="ed-buscar-ubicacion form-control form-control-sm" style="border-radius:10px; margin-left: 22px; width: 140px;"
         />
-        <i class="fas fa-search" style="margin-left: -22px; color: gray;"></i>
+        <i id="iconoBuscar" class="fas fa-search" style="margin-left: -22px; color: gray;"></i>
     </form>
 
     <form id="centerM" class="top-menu-center form-inline pt-1 float-left" style="margin-top:-8px; height:48px;">
-        <button id="cmdAgregarAMapa" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 100px; line-height: 14px;">
+        <button id="cmdAgregarAMapa" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 100px; line-height: 14px; border:none;">
             <span class="icono-opcion-encabezado float-left" style="background-color: #1779ba;">
                 <i class="fas fa-globe-americas"></i>
             </span>
             <span class="texto-opcion-encabezado">Agregar a Mapa</span>
         </button>
-        <button id="cmdCapasActivas" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 100px; line-height: 14px;">
+        <button id="cmdCapasActivas" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 100px; line-height: 14px; border:none;">
             <span class="icono-opcion-encabezado float-left" style="background-color: #909090;">
                 <i class="fas fa-layer-group"></i>
             </span>
             <span class="texto-opcion-encabezado">Capas Activas</span>
         </button>
-        <button id="cmdAgregarObjeto" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 100px; line-height: 14px;">
+        <button id="cmdAgregarObjeto" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 100px; line-height: 14px; border:none;">
             <span class="icono-opcion-encabezado float-left" style="background-color: #65e394;">
                 <i class="fas fa-edit"></i>
             </span>
             <span class="texto-opcion-encabezado">Agregar Objeto</span>
         </button>
-        <button id="cmdEstaciones" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 110px; line-height: 14px;">
+        <button id="cmdEstaciones" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 110px; line-height: 14px; border:none;">
             <span class="icono-opcion-encabezado float-left" style="background-color: #d67060;">
                 <i class="fas fa-rss"></i>
             </span>
