--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,8 @@
         <script src="js/geoportal.js"></script>
         <script src="js/geoportal-mapa.js"></script>
         <script src="js/geoportal-preferencias.js"></script>
+        <script src="js/geoportal-capas.js"></script>
+        <script src="js/geoportal-plugin-cliente.js"></script>
         <script>
             document.addEventListener("DOMContentLoaded", async _ => {                
                 ZVC.options.debug.events = false;
