--- a/www/left/Preferencias.html
+++ b/www/left/Preferencias.html
@@ -1,3 +1,4 @@
+<div class="titulo-panel-izquierda">Preferencias</div>
 <div class="p-2">
     <label class="small mb-0">Mapa Base</label>
     <div class="input-group input-group-sm">
