--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
         <script src="js/geoportal-mapa.js"></script>
         <script src="js/geoportal-preferencias.js"></script>
         <script src="js/geoportal-capas.js"></script>
+        <script src="js/geoportal-escalas.js"></script>
         <script src="js/geoportal-plugin-cliente.js"></script>
         <script>
             document.addEventListener("DOMContentLoaded", async _ => {                
