--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
         <script src="js/Leaflet.CustomLayer.js" type="text/javascript"></script>
         <script src="js/turf.min.js" type="text/javascript"></script>
         <script src="js/konva.min.js" type="text/javascript"></script>
+        <script src="js/catiline.min.js" type="text/javascript"></script>
         <!-- Core -->
         <script src="js/jquery.min.js"></script>
         <script src="js/popper.min.js"></script>
