--- a/www/left/Capas.html
+++ b/www/left/Capas.html
@@ -1,2 +1,8 @@
-<div class="titulo-panel-izquierda">Capas Activas</div>
+<div class="titulo-panel-izquierda text-left pl-2">
+    Capas Activas
+    <button id="cmdAgregarGrupo" class="float-right btn btn-sm btn-link text-white">
+        <i class="fas fa-plus-square"></i>
+        Grupo
+    </button>
+</div>
 <div id="cntItems"></div>
