--- a/www/left/Capas.html
+++ b/www/left/Capas.html
@@ -5,4 +5,7 @@
         Grupo
     </button>
 </div>
-<div id="cntItems"></div>
+<div id="scrollerItems" style="overflow-y: auto; width: 266px; border:1px solid black; ">
+    <div id="cntItems"></div>
+</div>
+<div id="panelPropiedades" data-z-component="./PanelPropiedades" style="border:1px solid red;"></div>
