--- a/www/left/PanelPropiedades.html
+++ b/www/left/PanelPropiedades.html
@@ -1,3 +1,8 @@
-<div>
-    Panel Propiedades
+<div id="root" class="panel-propiedades-fijo" style="position: absolute;">
+    <div id="filaTitulo" class="titulo-panel-propiedades" >
+        <div id="titulo" class="ml-1 py-1" style="position: absolute;">[Titulo del Elemento]</div>
+    </div>
+    <img id="pin" src="img/iconos/attached.svg" height="16px" style="cursor: pointer; position: absolute;" data-z-clickable="true" />
+    <div id="contenedorPaneles" style="overflow-y: auto; position:absolute;">        
+    </div>
 </div>
