--- a/www/left/propiedades/PropCapa.html
+++ b/www/left/propiedades/PropCapa.html
@@ -1,1 +1,22 @@
-<div>Propiedades de la Capa</div>
+<div>
+    <i id="imgAbierto" class="float-left far fa-minus-square mx-1 mt-1" data-z-clickable="true" style="cursor: pointer;"></i>
+    <div id="titulo" class="py-1 titulo-subpanel-propiedades"></div>
+</div>
+<div id="contenido" class="contenido-subpanel-propiedades container-fluid">
+    <div class="row mt-1">
+        <div class="col-4">
+            <label class="etiqueta-subpanel-propiedades">Nombre</label>
+        </div>
+        <div class="col-8">
+            <input id="edNombre" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
+        </div>
+    </div>
+    <div class="row mt-1">
+        <div class="col-4">
+            <label class="etiqueta-subpanel-propiedades">Opacidad</label>
+        </div>
+        <div class="col-8">
+            <div id="edOpacidad" style="transform:scale(0.5); margin-left:-72px; width:290px;margin-top:3px;"></div>
+        </div>
+    </div>
+</div>
