--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,10 @@
         <!-- Bootstrap -->
         <link type="text/css" href="bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet">
         <link type="text/css" href="css/z-pops.css" rel="stylesheet">
+        <link type="text/css" href="css/nouislider.min.css" rel="stylesheet">
         <link type="text/css" href="css/geoportal.css" rel="stylesheet">
         <link href="leaflet/leaflet.css" rel="stylesheet" />
+        <link href="css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
         <!-- Leaflet + TURF + Konva-->
         <script src="leaflet/leaflet.js" type="text/javascript"></script>
         <script src="js/Leaflet.VarTileLayer.GL.js" type="text/javascript"></script>
@@ -25,6 +27,11 @@
         <script src="js/popper.min.js"></script>
         <script src="js/tooltip.min.js"></script>
         <script src="bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+        <script src="js/nouislider.min.js"></script>
+        <script src="js/moment-with-locales.js"></script>
+        <script src="js/moment-timezone-with-data.js"></script>
+        <script src="js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+        <script src="js/time-utils.js"></script>
         <!-- Z-Client -->
         <script src="js/z-client.js"></script>
         <script src="js/z-pops.js"></script>
