--- a/www/left/propiedades/FechaCapa.html
+++ b/www/left/propiedades/FechaCapa.html
@@ -5,10 +5,10 @@
 <div id="contenido" class="contenido-subpanel-propiedades container-fluid">
     <div class="row mt-1">
         <div class="col-4">
-            <label class="etiqueta-subpanel-propiedades mb-0">Nombre</label>
+            <div id="edFijar" data-z-component="common/CheckBox" data-label="Fijar" class="etiqueta-subpanel-propiedades mb-0"></div>
         </div>
         <div class="col-8">
-            <input id="edNombre" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
+            <div id="edTiempo" data-z-component="common/DateTimeField"></div>
         </div>
     </div>
 </div>
