--- a/www/left/propiedades/NivelCapa.html
+++ b/www/left/propiedades/NivelCapa.html
@@ -5,10 +5,15 @@
 <div id="contenido" class="contenido-subpanel-propiedades container-fluid">
     <div class="row mt-1">
         <div class="col-4">
-            <label class="etiqueta-subpanel-propiedades mb-0">Nombre</label>
+            <label class="etiqueta-subpanel-propiedades mb-0">Nivel</label>
         </div>
         <div class="col-8">
-            <input id="edNombre" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
+            <div id="edNivel" style="transform:scale(0.5); margin-left:-72px; width:290px;margin-top:3px;"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <label id="lblNivel" class="etiqueta-subpanel-propiedades mb-0">...</label>
         </div>
     </div>
 </div>
