--- a/www/common/CheckBox.html
+++ b/www/common/CheckBox.html
@@ -1,4 +1,4 @@
-<label style="cursor: pointer;">
+<label style="cursor: pointer; margin-bottom: 4px;">
     <i id="check" class="far fa-square mr-2" data-z-clickable="true"></i>
     <span id="labelText" data-z-clickable="true"></span>
 </label>
