--- a/www/left/Capas.html
+++ b/www/left/Capas.html
@@ -5,7 +5,8 @@
         Grupo
     </button>
 </div>
-<div id="scrollerItems" style="overflow-y: auto; width: 266px;">
+<div id="scrollerItems" style="overflow-y: auto; width: 268px;">
     <div id="cntItems"></div>
 </div>
+<div id="hsplit" class="hsplit"></div>
 <div id="panelPropiedades" data-z-component="./PanelPropiedades"></div>
