--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
         <script src="js/moment-timezone-with-data.js"></script>
         <script src="js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
         <script src="js/time-utils.js"></script>
+        <script src="js/interact.min.js"></script>
         <!-- Z-Client -->
         <script src="js/z-client.js"></script>
         <script src="js/z-pops.js"></script>
