--- a/www/left/propiedades/PropCapa.html
+++ b/www/left/propiedades/PropCapa.html
@@ -11,12 +11,12 @@
             <input id="edNombre" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-1">
         <div class="col-4">
             <label class="etiqueta-subpanel-propiedades mb-0">Opacidad</label>
         </div>
         <div class="col-8">
-            <div id="edOpacidad" style="transform:scale(0.5); margin-left:-72px; width:290px;margin-top:3px;"></div>
+            <div id="edOpacidad"></div>
         </div>
     </div>
 </div>
