--- a/www/left/propiedades/NivelCapa.html
+++ b/www/left/propiedades/NivelCapa.html
@@ -8,7 +8,7 @@
             <label class="etiqueta-subpanel-propiedades mb-0">Nivel</label>
         </div>
         <div class="col-8">
-            <div id="edNivel" style="transform:scale(0.5); margin-left:-72px; width:290px;margin-top:3px;"></div>
+            <div id="edNivel"></div>
         </div>
     </div>
     <div class="row">
