--- a/www/mapa/Central.html
+++ b/www/mapa/Central.html
@@ -11,3 +11,4 @@
     <div id="contenedorDias" style="top:10px; height: 38px;"></div>
 </div>
 <div id="tooltip" style="position: absolute; top:-2px; z-index:6100;"></div>
+<div id="cntPanelesFlotantes" style="position: absolute; top:0; left:0; z-index:6090;"></div>
