--- a/base-plugin/www/propiedades/PropIsobandas.html
+++ b/base-plugin/www/propiedades/PropIsobandas.html
@@ -1,5 +1,5 @@
-<div>
-    <i id="imgAbierto" class="float-left far fa-minus-square mx-1 mt-1" data-z-clickable="true" style="cursor: pointer;"></i>
+<div id="filaTitulo" data-z-clickable="true" style="cursor: pointer;" >
+    <i id="imgAbierto" class="float-left far fa-minus-square mx-1 mt-1"></i>
     <div id="titulo" class="py-1 titulo-subpanel-propiedades"></div>
 </div>
 <div id="contenido" class="contenido-subpanel-propiedades container-fluid pb-1">
