--- a/www/top/PanelAgregar.html
+++ b/www/top/PanelAgregar.html
@@ -3,7 +3,7 @@
         <span class="icono-agregar ml-1 float-left">
             <i class="fas fa-globe-americas"></i>
         </span>
-        Agregar Capa a Mapa
+        Agregar Capa
         <button id="cmdCerrarAgregar" type="button" class="btn btn-sm btn-outline-secondary p-1 ml-2 text-white" style="line-height: 10px;">
             <i class="fas fa-times"></i>
         </button>
