--- a/www/top/Top.html
+++ b/www/top/Top.html
@@ -13,7 +13,7 @@
             <span class="icono-opcion-encabezado float-left" style="background-color: #1779ba;">
                 <i class="fas fa-globe-americas"></i>
             </span>
-            <span class="texto-opcion-encabezado">Agregar a Mapa</span>
+            <span class="texto-opcion-encabezado">Agregar Capa</span>
         </button>
         <button id="cmdCapasActivas" type="button" class="btn btn-sm btn-outline-dark text-white ml-1" style="width: 100px; line-height: 14px; border:none;">
             <span class="icono-opcion-encabezado float-left" style="background-color: #909090;">
@@ -35,6 +35,7 @@
         </button>
     </form>
     <div id="panelAgregar" data-z-component="./PanelAgregar" style="position: absolute;"></div>
+    <div id="panelAgregarObjeto" class="panel-agregar-objeto" data-z-component="./PanelAgregarObjeto" style="position: absolute;"></div>
 
     <form id="rightM" class="top-menu-right form-inline pt-1" style="position: absolute; margin-top:-8px; height:48px; top:0; ">
         <i id="cmdZoomIn" class="far fa-plus-square fa-lg float-left ml-3" style="cursor: pointer;" data-z-clickable="true"></i>
