--- a/www/left/propiedades/PropCapa.html
+++ b/www/left/propiedades/PropCapa.html
@@ -1,7 +1,7 @@
-<div>
-    <i id="imgAbierto" class="float-left far fa-minus-square mx-1 mt-1" data-z-clickable="true" style="cursor: pointer;"></i>
+<div id="filaTitulo" data-z-clickable="true" style="cursor: pointer;">
+    <i id="imgAbierto" class="float-left far fa-minus-square mx-1 mt-1"></i>
     <div id="titulo" class="py-1 titulo-subpanel-propiedades"></div>
-</div>
+</div</div>
 <div id="contenido" class="contenido-subpanel-propiedades container-fluid">
     <div class="row mt-1">
         <div class="col-4">
