--- a/www/bottom/PanelAnalisis.html
+++ b/www/bottom/PanelAnalisis.html
@@ -1,3 +1,5 @@
-<div style="border: 1px solid red;">
-    <div>Panel de Análisis</div>
+<div id="rowAnalizador" style="position: absolute;">
+    <select id="edAnalizador" class="custom-select custom-select-sm" data-z-id-field="codigo" data-z-label-field="nombre"></select>
 </div>
+<div id="vsplitAnalisis" class="vsplit" style="position: absolute;"></div>
+<div id="panelPropiedadesAnalisis" data-z-component="./PanelPropiedadesAnalisis" style="position: absolute;"></div>
