--- a/www/bottom/PanelAnalisis.html
+++ b/www/bottom/PanelAnalisis.html
@@ -1,6 +1,7 @@
 <div id="rowAnalizador" style="position: absolute; background-color: lightgray;" class="">
     <div class="container-fluid pt-1" style="display: flex; position: relative;">
         <img id="iconoAnalizador" height="28px" class="mr-1 mt-1" />
+        <i id="iconoTrabajando" class="fas fa-spin fa-spinner fa-2x mr-1"></i>
         <select id="edAnalizador" class="custom-select custom-select-sm ml-auto" data-z-id-field="codigo" data-z-label-field="nombre"></select>
     </div>
     <hr class="my-1" />
