--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,9 @@
         <!-- Highcharts-->
         <script src="Highcharts-8.0.0/highcharts.js" type="text/javascript"></script>
         <script src="Highcharts-8.0.0/highcharts-more.js" type="text/javascript"></script>
-        <script src="Highcharts-8.0.0/themes/dark-unica.js" type="text/javascript"></script>
+        <!--<script src="Highcharts-8.0.0/themes/dark-unica.js" type="text/javascript"></script>-->
+        <script src="Highcharts-8.0.0/themes/grid-light.js" type="text/javascript"></script>
+
         <!-- Leaflet + TURF + Konva-->
         <script src="leaflet/leaflet.js" type="text/javascript"></script>
         <script src="js/Leaflet.VarTileLayer.GL.js" type="text/javascript"></script>
