--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,7 @@
         <script src="zvc/zvc-bootstrap-table.js"></script>
         <!-- GeoPortal -->
         <script src="js/geoportal.js"></script>
+        <script src="js/geoportal-mensajes.js"></script>
         <script src="js/geoportal-mapa.js"></script>
         <script src="js/geoportal-preferencias.js"></script>
         <script src="js/geoportal-capas.js"></script>
