--- a/base-plugin/www/propiedades/PropVectores.html
+++ b/base-plugin/www/propiedades/PropVectores.html
@@ -2,7 +2,7 @@
     <i id="imgAbierto" class="float-left far fa-minus-square mx-1 mt-1"></i>
     <div id="titulo" class="py-1 titulo-subpanel-propiedades"></div>
 </div>
-<div id="contenido" class="contenido-subpanel-propiedades container-fluid">
+<div id="contenido" class="contenido-subpanel-propiedades container-fluid pb-1">
     <div class="row mt-1">
         <div class="col-5">
             <label class="etiqueta-subpanel-propiedades mb-0">Resolución</label>
