--- a/www/Main.html
+++ b/www/Main.html
@@ -4,3 +4,4 @@
 <div id="hsplitAnalisis" class="hsplit" style="position: absolute; z-index: 6090;" ></div>
 <div id="panelAnalisis" data-z-component="bottom/PanelAnalisis" style="position: absolute; z-index: 6080;" ></div>
 <div id="left" data-z-component="./left/Left" style="position: absolute; z-index: 6081;" class="panel-izquierda"></div>
+<div id="auxiliar" data-z-component="./Auxiliar" style="position: absolute;" class="auxiliar"></div>
