--- a/www/common/Perfil.html
+++ b/www/common/Perfil.html
@@ -1,4 +1,8 @@
 <div class="p-2">
     <img id="foto" src="img/anonimo.svg" height="40px" class="float-left" />
     <h6 id="nombre" class="text-right mr-1" style="margin-top: 15px;"></h6>
+    <div id="conBiografia">
+        <hr />
+        <div id="descripcionPerfil" class="text-muted small"></div>
+    </div>
 </div>
