--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
         <link type="text/css" href="css/geoportal.css" rel="stylesheet">
         <link href="leaflet/leaflet.css" rel="stylesheet" />
         <link href="css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+        <!-- Croppie -->
+        <link type="text/css" href="css/croppie.css" rel="stylesheet">
         <!-- Highcharts-->
         <script src="Highcharts-8.0.0/highcharts.js" type="text/javascript"></script>
         <script src="Highcharts-8.0.0/highcharts-more.js" type="text/javascript"></script>
@@ -28,6 +30,8 @@
         <script src="js/turf.min.js" type="text/javascript"></script>
         <script src="js/konva.min.js" type="text/javascript"></script>
         <script src="js/catiline.min.js" type="text/javascript"></script>
+        <!-- Croppie -->
+        <script src="js/croppie.js" type="text/javascript"></script>
         <!-- Core -->
         <script src="js/jquery.min.js"></script>
         <script src="js/popper.min.js"></script>
