--- a/www/left/perfilUsuario/PerfilUsuario.html
+++ b/www/left/perfilUsuario/PerfilUsuario.html
@@ -1,7 +1,21 @@
 <div class="titulo-panel-izquierda">Sesión Iniciada</div>
 <div id="perfil" data-z-component="common/Perfil"></div>
 <hr class="my-0" />
-<div id="filaEditarPerfil" class="fila-opcion">
+
+<div id="filaEditarPerfil" class="fila-opcion mt-1">
+    <img src="img/perfil-usuario.svg" height="24px" class="float-left ml-2 mt-1" />
     <button id="cmdEditarPerfil" class="btn btn-link" type="button">Editar mi Perfil</button>
     <i class="far fa-hand-point-right float-right mr-1" style="margin-top:8px;"></i>
+</div>
+
+<div id="filaCambiarPwd" class="fila-opcion mt-1">
+    <img src="img/contrasena.svg" height="24px" class="float-left ml-2 mt-1" />
+    <button id="cmdCambiarPwd" class="btn btn-link" type="button">Cambiar mi Contraseña</button>
+    <i class="far fa-hand-point-right float-right mr-1" style="margin-top:8px;"></i>
+</div>
+
+<hr />
+<div id="filaCerrarSesion" class="fila-opcion">
+    <img src="img/logout.svg" height="24px" class="float-left ml-2 mt-1" />
+    <button id="cmdLogout" class="btn btn-link" type="button">Cerrar Sesión</button>
 </div>
