--- a/base-plugin/www/propiedades/PropEscalaVisualizador.html
+++ b/base-plugin/www/propiedades/PropEscalaVisualizador.html
@@ -22,11 +22,13 @@
         </div>
     </div>
     <div class="row mt-1">
-        <div class="col-5">
+        <div class="col-4">
             <input id="edMin" type="number" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
         </div>
-        <div class="col-2"></div>
-        <div class="col-5">
+        <div class="col-4 text-center">
+            <div id="unidad" class="text-muted text-center"></div>
+        </div>
+        <div class="col-4">
             <input id="edMax" type="number" class="text-right form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
         </div>
     </div>
