--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
         <script src="js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
         <script src="js/time-utils.js"></script>
         <script src="js/interact.min.js"></script>
+        <script src="js/minz-client.js"></script>
         <!-- Z-Client -->
         <script src="js/z-client.js"></script>
         <script src="js/z-pops.js"></script>
