--- a/www/left/Left.html
+++ b/www/left/Left.html
@@ -1,13 +1,18 @@
 <div class="panel-izquierda">
     <div class="container-fluid">
-        <div id="tabs" class="bg-light" style="position:absolute; left:0; width: 70px;">
+        <div class="cuadro-logo" style="position:absolute; left:0; width: 70px; height: 70px;">
+            <img src="img/esfera-128x128.png" width="32px">
+            <div style="color: black; font-weight: bold;">GeoPortal</div>
+            <hr class="my-2" />
+        </div>
+        <div id="tabs" class="bg-light" style="position:absolute; left:0; width: 70px; top:70px;">
             <div class="opcion-izquierda activa" data-opcion="sesion">
-                <img src="img/iconos/usuario.svg" width="32px">
+                <img id="fotoUsuario" src="img/iconos/usuario.svg" width="32px">
                 <div>Sesión</div>
             </div>
             <div class="opcion-izquierda"  data-opcion="preferencias">
-                <img src="img/iconos/preferencias.svg" width="32px">
-                <div>Preferencias</div>
+                <img src="img/iconos/configurar.svg" width="32px">
+                <div>Configurar</div>
             </div>
             <div class="opcion-izquierda"  data-opcion="capas">
                 <img src="img/iconos/capas.svg" width="32px">
