--- a/www/left/propiedades/CapaObserva.html
+++ b/www/left/propiedades/CapaObserva.html
@@ -3,6 +3,8 @@
     <div id="titulo" class="py-1 titulo-subpanel-propiedades">Observar Variables</div>
 </div>
 <div id="contenido" class="contenido-subpanel-propiedades container-fluid">
+    <div id="rowNueva"></div>
+    <!--
     <div id="rowNueva" class="row mt-1">
         <div class="col">
             <img id="iconoVar1" class="mr-1 float-left" height="16px" src="img/iconos/observar.svg" />
@@ -10,6 +12,7 @@
             <i id="caretObservar" class="fas fa-caret-right ml-1 float-right mt-1"></i>
         </div>
     </div>
+    -->
     <div id="rowWorking" class="row mt-1">
         <div class="col">
             <i class="mr-1 float-left fas fa-spin fa-spinner"></i>
