--- a/base-plugin/www/propiedades/PropSerieTiempoVars.html
+++ b/base-plugin/www/propiedades/PropSerieTiempoVars.html
@@ -2,51 +2,8 @@
     <i id="imgAbierto" class="float-left far fa-minus-square mx-1 mt-1"></i>
     <div id="titulo" class="py-1 titulo-subpanel-propiedades"></div>
 </div>
-<div id="contenido" class="contenido-subpanel-propiedades container-fluid">
-    <div class="row mt-1">
-        <div class="col">
-            <i id="delVar1" class="fas fa-trash-alt mr-2 float-left mt-1" data-z-clickable="true" style="cursor: pointer;"></i>
-            <img id="iconoVar1" class="mr-1 float-left" height="16px" />
-            <span id="lblVar1" class="nombre-item" data-z-clickable="true"></span>
-            <i id="caretVar1" class="fas fa-caret-right ml-1 float-right mt-1"></i>
-        </div>
-    </div>
-    <div id="grpNivel1" class="ml-4">
-        <div class="row mt-1">
-            <div class="col-4">
-                <label class="etiqueta-subpanel-propiedades mb-0">Nivel</label>
-            </div>
-            <div class="col-8">
-                <div id="edNivel1"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <label id="lblNivel1" class="etiqueta-subpanel-propiedades mb-0">...</label>
-            </div>
-        </div>
-    </div>
-    <div class="row mt-1">
-        <div class="col">
-            <i id="delVar2" class="fas fa-trash-alt mr-2 float-left mt-1" data-z-clickable="true" style="cursor: pointer;"></i>
-            <img id="iconoVar2" class="mr-1 float-left" height="16px" />
-            <span id="lblVar2" class="nombre-item" data-z-clickable="true"></span>
-            <i id="caretVar2"  class="fas fa-caret-right ml-1 float-right mt-1"></i id="caretVar1">
-        </div>
-    </div>
-    <div id="grpNivel2" class="ml-4">
-        <div class="row mt-1">
-            <div class="col-4">
-                <label class="etiqueta-subpanel-propiedades mb-0">Nivel</label>
-            </div>
-            <div class="col-8">
-                <div id="edNivel2"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <label id="lblNivel2" class="etiqueta-subpanel-propiedades mb-0">...</label>
-            </div>
-        </div>
-    </div>
+<div id="contenido" class="contenido-subpanel-propiedades container-fluid pb-2">
+    <div id="contenedorVar1"></div>
+    <hr class="my-1" />
+    <div id="contenedorVar2"></div>
 </div>
