--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,7 @@
         <script src="js/geoportal-capas.js"></script>
         <script src="js/geoportal-escalas.js"></script>
         <script src="js/geoportal-objetos.js"></script>
+        <script src="js/geoportal-consultas.js"></script>
         <script src="js/geoportal-plugin-cliente.js"></script>
         <script>
             document.addEventListener("DOMContentLoaded", async _ => {                
