--- a/www/left/propiedades/ObjetoObserva.html
+++ b/www/left/propiedades/ObjetoObserva.html
@@ -2,6 +2,9 @@
     <i id="imgAbierto" class="float-left far fa-minus-square mx-1 mt-1"></i>
     <div id="titulo" class="py-1 titulo-subpanel-propiedades">Observar Variables</div>
 </div>
+<div id="contenido" class="contenido-subpanel-propiedades container-fluid">    
+</div>
+<!--
 <div id="contenido" class="contenido-subpanel-propiedades container-fluid">
     <div class="row mt-1">
         <div class="col">
@@ -14,3 +17,4 @@
     <div id="cntObserva" class="ml-1">        
     </div>
 </div>
+---->
