--- a/www/left/login/Login.html
+++ b/www/left/login/Login.html
@@ -1,7 +1,7 @@
 <div class="titulo-panel-izquierda">Iniciar Sesión</div>
 <div class="p-2">
     <img src="img/esfera-128x128.png" width="64px" class="float-left" />
-    <h6 class="text-right mr-1" style="margin-top: 25px;">GEOPORTAL / PUCV</h6>
+    <h6 class="text-right mr-1" style="margin-top: 25px;">GEOOS / PUCV</h6>
 </div>
 <hr class="mb-0" />
 <div id="alerta" class="alert alert-danger m-2 small"></div>
