--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="PUCV - GEOPortal">
         <meta name="author" content="Zonar">
-        <title>GEOPortal</title>  
+        <title>GEOOS</title>  
         <!-- Fonts -->
         <link rel="stylesheet" href="fontawesome-free-5.11.2-web/css/all.min.css" >
         <!-- Bootstrap -->
