--- a/www/left/propiedades/PropObjeto.html
+++ b/www/left/propiedades/PropObjeto.html
@@ -11,4 +11,8 @@
             <input id="edNombre" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
         </div>
     </div>
+    <div id="grupoPropiedades">
+        <hr class="my-1" />
+        <div id="contenedorPropiedades"></div>
+    </div>
 </div>
