--- a/www/mapa/SelectorTiempo.html
+++ b/www/mapa/SelectorTiempo.html
@@ -1,4 +1,12 @@
 <div class="selector-tiempo">
+    <table class="item-selector-tiempo" style="width: 80px; height: 24px;">
+        <tr>
+            <td id="lblNCapturas" data-z-clickable="true" class="text-center" style="width: 30px; height: 20px; cursor: pointer;">[0]</td>
+            <td id="camara" data-z-clickable="true" style="width: 18px; height: 20px; cursor: pointer;"><i class="ml-1 fas fa-lg fa-camera"></i></td>
+            <td id="caretCaptura" style="width: 18px; height: 20px; cursor: pointer;"><i class="ml-2 fas fa-caret-right"></i></td>
+        </tr>
+    </table>
+    <div style="height: 4px;"></div>
     <table>
         <tr>
             <td id="itemAno" class="item-selector-tiempo" style="width: 80px;">
