--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,21 @@
         <link href="css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
         <!-- Croppie -->
         <link type="text/css" href="css/croppie.css" rel="stylesheet">
+
+        <!--
+            Workaround para html2canvas con webgl context
+            https://stackoverflow.com/questions/55760121/html2canvas-captures-everything-except-the-content-of-an-inner-canvas
+        -->
+        <script>
+            HTMLCanvasElement.prototype.getContext = function(origFn) {
+                return function(type, attribs) {
+                    attribs = attribs || {};
+                    attribs.preserveDrawingBuffer = true;
+                    return origFn.call(this, type, attribs);
+                };
+            } (HTMLCanvasElement.prototype.getContext);
+        </script>
+
         <!-- Highcharts-->
         <script src="Highcharts-8.0.0/highcharts.js" type="text/javascript"></script>
         <script src="Highcharts-8.0.0/highcharts-more.js" type="text/javascript"></script>
@@ -44,6 +59,10 @@
         <script src="js/time-utils.js"></script>
         <script src="js/interact.min.js"></script>
         <script src="js/minz-client.js"></script>
+        <!-- Capturas -->
+        <script src="js/html2canvas.min.js"></script>
+        <script src="js/gif.js"></script>
+
         <!-- Z-Client -->
         <script src="js/z-client.js"></script>
         <script src="js/z-pops.js"></script>
