--- a/base-plugin/www/propiedades/PropVectores.html
+++ b/base-plugin/www/propiedades/PropVectores.html
@@ -4,10 +4,10 @@
 </div>
 <div id="contenido" class="contenido-subpanel-propiedades container-fluid pb-1">
     <div class="row mt-1">
-        <div class="col-5">
-            <label class="etiqueta-subpanel-propiedades mb-0">Resolución</label>
-        </div>
         <div class="col-7">
+            <label class="etiqueta-subpanel-propiedades mb-0">Resolución Máxima</label>
+        </div>
+        <div class="col-5">
             <input id="edResolucion" type="number" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
         </div>
     </div>
