--- a/www/Main.html
+++ b/www/Main.html
@@ -2,6 +2,8 @@
 <div id="central" data-z-component="./mapa/Central" style="position: absolute;" class="central"></div>
 <div id="top" data-z-component="./top/Top" style="position: absolute; z-index: 6080;" class="top"></div>
 <div id="hsplitAnalisis" class="hsplit" style="position: absolute; z-index: 6090;" ></div>
+<div id="minAnalisis" data-z-clickable="true" class="boton-estado-analisis" style="position: absolute;" ><img src="img/iconos/abajo.png" width="20px" height="20px" style="position: absolute;" /></div>
+<div id="maxAnalisis" data-z-clickable="true" class="boton-estado-analisis" style="position: absolute;" ><img src="img/iconos/arriba.png" width="20px" height="20px" style="position: absolute;" /></div>
 <div id="panelAnalisis" data-z-component="bottom/PanelAnalisis" style="position: absolute; z-index: 6080;" ></div>
 <div id="left" data-z-component="./left/Left" style="position: absolute; z-index: 6081;" class="panel-izquierda"></div>
 <div id="auxiliar" data-z-component="./Auxiliar" style="position: absolute;" class="auxiliar"></div>
