--- a/www/left/propiedades/PropCapa.html
+++ b/www/left/propiedades/PropCapa.html
@@ -16,7 +16,9 @@
             <label class="etiqueta-subpanel-propiedades mb-0">Opacidad</label>
         </div>
         <div class="col-8">
-            <div id="edOpacidad"></div>
+            <i class="far fa-minus-square float-left" style="margin-top:7px;"></i>
+            <div id="edOpacidad" class="mx-3"></div>
+            <i class="far fa-plus-square float-right" style="margin-top:-11px;"></i>
         </div>
     </div>
 </div>
