--- a/www/top/PanelAgregar.html
+++ b/www/top/PanelAgregar.html
@@ -11,9 +11,9 @@
     <div id="cntOpcionesAgregar" style="overflow-y: auto; max-height: 200px; padding:6px;">
     </div>
     <hr class="py-0 my-0" />
-    <form class="form-inline" style="padding: 5px;">
+    <div class="form-inline" style="padding: 5px;">
         <input id="edBuscadorAgregar" type="text" data-z-autochange-delay="300" placeholder="Buscar" class="form-control form-control-sm border" style="border-radius: 8px; font-size: 10px; border-color: gray !important; width:230px;" />
         <i id="lupa" class="fas fa-search fa-lg float-right lupa" style="margin-left: -18px; color:lightgray; font-size: 14px;"></i>
         <i id="limpiador" class="fas fa-times fa-lg float-right clearer" data-z-clickable="true" style="color:gray; cursor:pointer; display:none; margin-left: -18px; font-size: 14px;"></i>
-    </form>
+    </div>
 </div>
