--- a/www/left/propiedades/PropObjeto.html
+++ b/www/left/propiedades/PropObjeto.html
@@ -11,6 +11,24 @@
             <input id="edNombre" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
         </div>
     </div>
+    <div id="coordenadas">
+        <div class="row mt-1">
+            <div class="col-4">
+                <label class="etiqueta-subpanel-propiedades mb-0">Latitud</label>
+            </div>
+            <div class="col-8">
+                <input id="edLatitud" type="number" min="-89" max="89" step="0.25" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
+            </div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-4">
+                <label class="etiqueta-subpanel-propiedades mb-0">Longitud</label>
+            </div>
+            <div class="col-8">
+                <input id="edLongitud" type="number" min="-180" max="180" step="0.25" class="form-control form-control-sm editor-subpanel-propiedades" data-z-autochange-delay="300" />
+            </div>
+        </div>
+    </div>
     <div id="grupoPropiedades">
         <hr class="my-1" />
         <div id="contenedorPropiedades"></div>
