--- a/www/mapa/SelectorTiempo.html
+++ b/www/mapa/SelectorTiempo.html
@@ -3,7 +3,7 @@
         <tr>
             <td id="lblNCapturas" data-z-clickable="true" class="text-center" style="width: 30px; height: 20px; cursor: pointer;">[0]</td>
             <td id="camara" data-z-clickable="true" style="width: 18px; height: 20px; cursor: pointer;"><i class="ml-1 fas fa-lg fa-camera"></i></td>
-            <td id="caretCaptura" style="width: 18px; height: 20px; cursor: pointer;"><i class="ml-2 fas fa-caret-right"></i></td>
+            <td id="caretCaptura" style="width: 18px; height: 20px; cursor: pointer;" data-z-clickable="true"><i class="ml-2 fas fa-caret-right"></i></td>
         </tr>
     </table>
     <div style="height: 4px;"></div>
