--- a/www/top/Top.html
+++ b/www/top/Top.html
@@ -5,7 +5,7 @@
             data-z-autochange-delay="300" 
             class="ed-buscar-ubicacion form-control form-control-sm" style="border-radius:10px; margin-left: 22px; width: 140px;"
         />
-        <i id="iconoBuscar" class="fas fa-search" style="margin-left: -22px; color: gray;"></i>
+        <i id="iconoBuscar" data-z-clickable="true" class="fas fa-search" style="margin-left: -22px; color: gray; cursor: pointer;"></i>
     </div>
 
     <div id="centerM" class="top-menu-center form-inline pt-1" style="position: absolute; margin-top:-8px; height:48px; top:0;">
