--- a/www/bottom/PanelAnalisis.html
+++ b/www/bottom/PanelAnalisis.html
@@ -7,6 +7,6 @@
     <hr class="my-1" />
 </div>
 <div id="vsplitAnalisis" class="vsplit" style="position: absolute;"></div>
-<div id="propiedadesAnalisis" data-z-autoload="common/Empty" style="position: absolute; left:4px; top:40px; overflow-y: auto;">
+<div id="propiedadesAnalisis" class="pb-2" data-z-autoload="common/Empty" style="position: absolute; left:4px; top:40px; overflow-y: auto;">
 </div>
 <div id="contenedorAnalisis" style="position: absolute;" data-z-load="common/Empty"></div>
