--- a/www/left/Left.html
+++ b/www/left/Left.html
@@ -18,6 +18,10 @@
                 <img src="img/iconos/capas.svg" width="32px">
                 <div>Capas</div>
             </div>
+            <div id="ayuda" class="opcion-izquierda mt-auto"  data-opcion="ayuda">
+                <img src="img/iconos/ayuda.svg" width="32px">
+                <div>Ayuda</div>
+            </div>
         </div>
         <div id="opcionesLoader" class="border" style="position:absolute; left:70px; width: 270px;" data-z-load="./Sesion"></div>
     </div>
