--- a/www/left/Ayuda.html
+++ b/www/left/Ayuda.html
@@ -9,5 +9,11 @@
     <hr />
     <ul>
         <li><a target="_blank" href="http://help.geoos.org">Portal de Información y Ayuda</a></li>
+        <ul>
+            <li><a target="_blank" href="http://help.geoos.org/fuentes-de-datos/">Fuentes de Datos</a></li>
+            <li><a target="_blank" href="http://help.geoos.org/ayuda/">Ayuda</a></li>
+            <li><a target="_blank" href="http://help.geoos.org/colabora-con-geoos/">Colabora con GEOOS</a></li>
+            <li><a target="_blank" href="http://help.geoos.org/contacto/">Contacto</a></li>
+        </ul>
     </ul>
 </div>
